final final commit

--- a/assets/css/mediaQueries.css
+++ b/assets/css/mediaQueries.css
@@ -93,6 +93,7 @@
     .portfolio-link{
         border-left: lightgray 0.25px solid;
         border-right: none;
+    }
 
     .portfolio-image {
         float:left;
