--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -14,7 +14,7 @@ h2 {
     justify-content: space-between;
     align-items: flex-end;
     align-content: center;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     font-size: 18px;
     max-inline-size: 25%;
     padding: 25px;
